<resources>

    <!-- Name of the app -->
    <string name="app_name">Contacts</string>

    <!-- AndroidManifest doesn't work with common_ strings, so use this workaround --> <skip />
    <string name="title_activity_settings" translatable="false">@string/common_settings</string>
    <string name="title_activity_select_contacts" translatable="false">@string/delete_contacts</string>

   <!-- Content description of the contact's photo for accessibility (not shown on the screen) [CHAR LIMIT=NONE] -->
    <string name="contact_photo">Contact photo</string>

    <!-- Title of the telephone field (contact details screen) -->
    <string name="telephone">Telephone</string>

    <!-- TODO: move 1,2,3 to java --> <skip />
    <!-- Title of the 1st telephone field (contact details screen) -->
    <string name="telephone1">Telephone 1</string>

    <!-- Title of the 2nd telephone field (contact details screen) -->
    <string name="telephone2">Telephone 2</string>

    <!-- Title of the 3rd telephone field (contact details screen) -->
    <string name="telephone3">Telephone 3</string>

    <!-- Title of the email field (contact details screen) -->
    <string name="email">Email</string>

    <!-- Title of the address field (contact details screen) -->
    <string name="address">Address</string>

    <!-- Title of the first name field (contact details screen) -->
    <string name="name">Name</string>

    <!-- Title of the surname field (contact details screen) -->
    <string name="surname">Surname</string>

    <!-- Title of the description field (contact details screen) -->
    <string name="description">Description</string>

    <!-- Warning shown when the user doesn't input a name or a surname of the contact (contact details screen) -->
    <string name="name_validation">Name or Surname is required</string>

    <!-- Warning shown when the user doesn't input a telephone number (contact details screen) -->
    <string name="number_validation">Telephone is required</string>

    <!-- Dialog title shown when the user tries to add a photo to a contact (add new contact screen) -->
    <string name="select_photo">Select photo</string>

    <!-- Shown in "Add new contact" screen, action button in place of where the photo would be (placeholder button) -->
    <string name="tap_to_add_photo">Tap to add photo</string>

    <!-- Shown in "Select Photo" dialog, action button to take a photo -->
    <string name="take_photo">Take photo</string>

    <!-- Shown in "Select Photo" dialog, action button to open a file picker and choose a photo from gallery -->
    <string name="choose_from_gallery">Choose from gallery</string>

    <!-- Shown in "Select Photo" dialog, action button to remove the current photo -->
    <string name="remove_photo">Remove</string>

    <!-- Title of the file picker activity, after "select photo" (not shown everytime) -->
    <string name="select_file">Select file</string>

    <!-- Text button besides the FAB shown after a certain period of inactivity in the main screen -->
    <string name="add_contact">Add contact</string>

    <!-- Shown when the user hasn't selected any contacts for an action that requires a number of them -->
    <string name="no_contacts_selected">No contacts selected.</string>

    <!-- Dialog title for the contacts deletion screen -->
    <string name="delete_contacts">Delete contacts</string>

    <!-- Confirmation message after a successful contacts deletion -->
    <string name="contacts_deleted">Deletion succeeded.</string>

    <!-- Confirmation message shown in the contacts deletion dialog -->
    <string name="delete_contacts_approval">Are you sure you want to delete the selected contacts?</string>

    <!-- Title of the contacts display format setting -->
    <string name="contacts_display">Contacts display format</string>

    <!-- One possible choice of the contacts display format setting -->
    <string name="surname_first">Surname first</string>

    <!-- One possible choice of the contacts display format setting -->
    <string name="name_first">Name first</string>

    <!-- Contact Import/Export --> <skip />
    <!-- Button for the "import contacts" action, in app's settings -->
    <string name="import_contacts">Import contacts</string>

    <!-- Button for the "export contacts" action, in app's settings. Appears at alert dialog as title.-->
    <string name="export_contacts">Export contacts</string>

    <!-- folder selection explanation -->
    <string name="export_contacts_description">Export contacts to an existing folder or create a new one</string>

    <!-- Confirmation message after a successful contact import -->
    <string name="import_completed">Import completed.</string>

    <!-- Dialog shown when the user starts a contact import -->
    <string name="importing_contacts">Importing contacts. Please wait…</string>

    <!-- Dialog shown when the user starts a contact export -->
    <string name="exporting_contacts">Exporting contacts. Please wait…</string>

    <!-- Confirmation/Information message shown after a sucessful contact import, notifying the user of the exported file's location -->
    <string name="contacts_export_completed">Exported contacts saved at file: \'%1$s\'.</string>

    <!-- Text button inside the "import contacts" dialog screen, used to create a new folder in the device's storage -->
    <string name="new_folder">Export to New folder</string>

    <!-- Dialog title of the dialog shown when the user taps the "New folder" button -->
    <string name="new_folder_name">New folder name</string>

    <!-- Error message shown when the app didn't manage to create the folder necessary for the contact export -->
    <string name="folder_creation_failed">Failed to create \'%1$s\' folder.</string>

    <!-- Error message shown when the user tries to import contacts using a bad/corrupt .vcf file -->
    <string name="invalid_vcf">Invalid vcf.</string>

    <!-- Setting label for contacts display format -->
    <string name="contacts_display_format">Contacts display format</string>

    <!-- Warning shown at photo activity when no camera app is installed and enabled -->
    <string name="no_camera_app">There is no camera application to handle your request.</string>

    <!-- No free telephone fields while adding number to existing contact -->
    <string name="no_free_telephone_fields">All three telephone fields are occupied.</string>

    <string name="missing_name">Please enter Name</string>

    <string name="missing_telephone">Please enter Telephone</string>
    <string name="next_field">Next field</string>
    <string name="missing_field">Missing field</string>

    <string name="missing_required_contact_name_fields">First Name and Surname can not be left empty.</string>
    <string name="missing_required_contact_telephone_field">Telephone can not be left empty.</string>

</resources>
