<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activities.CreateContactActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/noPhotoContainer"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:background="@color/common_grey300"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="20dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:contentDescription="@string/tap_to_add_photo"
                android:src="@drawable/ic_add_a_photo_black87_36dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tap_to_add_photo"
                android:textSize="@dimen/common_text_size" />

        </LinearLayout>

        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/photo"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/common_activity_margin"
            android:background="@drawable/circle_grey"
            android:contentDescription="@string/contact_photo"
            android:visibility="gone"
            app:riv_mutate_background="true"
            app:riv_oval="true"
            app:riv_tile_mode="repeat" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/telephone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/common_activity_margin"
                android:gravity="center"
                android:hint="@string/telephone"
                android:imeOptions="actionNext"
                android:inputType="phone"
                android:textSize="@dimen/common_text_size" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_activity_margin">

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/common_activity_margin"
                android:gravity="center"
                android:hint="@string/name"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:maxLines="1"
                android:textSize="@dimen/common_text_size" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/surname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/common_activity_margin"
                android:gravity="center"
                android:hint="@string/surname"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:maxLines="1"
                android:textSize="@dimen/common_text_size" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/common_activity_margin"
                android:gravity="center"
                android:hint="@string/description"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:maxLines="1"
                android:textSize="@dimen/common_text_size" />
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/new_contact_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|end"
        android:layout_margin="@dimen/common_fab_margin"
        android:src="@drawable/common_ic_done_black_24dp" />

</android.support.design.widget.CoordinatorLayout>



