<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/scroll_view_container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="?attr/actionBarSize">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:id="@+id/contacts_io_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:clipToPadding="false"
            android:gravity="center"
            app:cardCornerRadius="8dp"
            app:cardElevation="2dp">

            <LinearLayout
                android:id="@+id/contacts_io_card_inner"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/import_contacts"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="4dp"
                    android:drawablePadding="12dp"
                    android:drawableStart="@drawable/ic_import"
                    android:gravity="start|center"
                    android:minHeight="48dp"
                    android:text="@string/import_contacts"
                    android:textColor="@color/common_black54"
                    android:textSize="16sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/common_black12" />

                <TextView
                    android:id="@+id/export_contacts"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="4dp"
                    android:drawablePadding="12dp"
                    android:drawableStart="@drawable/ic_export"
                    android:gravity="start|center"
                    android:minHeight="48dp"
                    android:text="@string/export_contacts"
                    android:textColor="@color/common_black54"
                    android:textSize="16sp" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            android:id="@+id/contacts_display_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:clipToPadding="false"
            android:gravity="center"
            app:cardCornerRadius="8dp"
            app:cardElevation="2dp">

            <LinearLayout
                android:id="@+id/contacts_display_card_inner"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:fontFamily="sans-serif-medium"
                    android:minHeight="19dp"
                    android:text="@string/contacts_display_format"
                    android:textColor="@color/common_black54"
                    android:textSize="16sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/common_black12" />

                <RadioGroup
                    android:id="@+id/display_sort_group"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RadioButton
                        android:id="@+id/surname_first_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_marginEnd="12dp"
                        android:layout_marginStart="12dp"
                        android:button="@null"
                        android:drawablePadding="10dp"
                        android:drawableStart="?android:attr/listChoiceIndicatorSingle"
                        android:minHeight="48dp"
                        android:text="@string/surname_first"
                        android:textAlignment="textStart"
                        android:textColor="@color/common_black54"
                        android:textSize="16sp" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/common_black12" />

                    <RadioButton
                        android:id="@+id/name_first_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_marginBottom="4dp"
                        android:layout_marginEnd="12dp"
                        android:layout_marginStart="12dp"
                        android:button="@null"
                        android:drawablePadding="10dp"
                        android:drawableStart="?android:attr/listChoiceIndicatorSingle"
                        android:minHeight="48dp"
                        android:text="@string/name_first"
                        android:textAlignment="textStart"
                        android:textColor="@color/common_black54"
                        android:textSize="16sp" />
                </RadioGroup>

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <include layout="@layout/common_app_settings" />

    </LinearLayout>

</ScrollView>